--- a/stylesheet.css
+++ b/stylesheet.css
@@ -65,13 +65,17 @@ input[type="number"]:focus {
 
 @media (max-width: 600px) {
     input[type="text"],
-    input[type="number"],
-    #submit {
+    input[type="number"]{
         width: 100%; /* Use full width on small screens */
     }
+    
     #submit{
-        height: 50px;
-    }
+    width: 100%;
+    height: 20%;
+    font-family: 'rubik';
+    font-size: 1rem;
+    border-radius: 20px;
+}
 }
 
 
