--- a/stylesheet.css
+++ b/stylesheet.css
@@ -62,19 +62,17 @@ input[type="number"]:focus {
     border: 3px solid #96c696;
 }
 
-@media (max-width: 800px) {
+
+@media (max-width: 600px) {
+    body{
+        background-color: red;
+    }
+
     input[type="text"],
-    input[type="number"]{
+    input[type="number"],
+    #submit {
         width: 100%; /* Use full width on small screens */
     }
-    
-    #submit{
-    width: 100%;
-    height: 20%;
-    font-family: 'rubik';
-    font-size: 1rem;
-    border-radius: 20px;
-}
 }
 
 
