--- a/stylesheet.css
+++ b/stylesheet.css
@@ -69,7 +69,9 @@ input[type="number"]:focus {
 
 .item{
     border:2px solid black;
-    display: block;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     width: 90%;
     height: auto;
     border-radius: 20px;
@@ -79,6 +81,7 @@ input[type="number"]:focus {
     overflow: auto;
     margin-bottom: 10px;
     background-color: white;
+    font-weight: 500;
 }
 
 .deleteButton{
